Third round of code cleanup :construction: